# libdicom

./: .editorconfig  .gitignore  .readthedocs.yaml  CHANGELOG.md  Dockerfile  Makefile.am  README.md  TODO  autogen.sh  configure.ac  meson.build  meson.format  meson_options.txt
.github/: dependabot.yml
.github/workflows/: run_unit_tests.yml  run_unit_tests_Linux.yml  run_unit_tests_MacOS.yml
data/test_files/: ct_brain_single.dcm  generated_encapsulated_defined_bot_1_to_1.dcm  generated_encapsulated_defined_bot_2_to_1.dcm  generated_encapsulated_defined_bot_2_to_2.dcm  generated_encapsulated_empty_bot_1_to_1.dcm  generated_encapsulated_empty_bot_2_to_1.dcm
doc/: Makefile  requirements-rtd.txt  requirements.txt
doc/source/: api.rst  conf.py  contributing.rst  index.rst  installation.rst  introduction.rst  tools.rst  usage.rst
include/: dicom.h
include/dicom/: dicom.h  version.h.in
scripts/: dist.py  meson-format.sh
src/: .dicom-data.c.swp  .dicom-file.c.swp  dicom-data.c  dicom-dict-build.c  dicom-dict-tables.c  dicom-dict-tables.h  dicom-dict.c  dicom-file.c  dicom-io.c  dicom-parse.c  dicom.c  dicom.h  getopt.c  pdicom.h  tags
subprojects/: check.wrap
supp/: set_default_local.supp
tests/: check_dicom.c
tools/: dcm-dump.1  dcm-dump.1.in  dcm-dump.c  dcm-getframe.1.in  dcm-getframe.c
